--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -8,7 +8,7 @@
     padding-top: 54px;
     display: none;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         position: initial;
         padding-top: 0;
     }
@@ -31,7 +31,7 @@
             filter: var(--dropdown-arrow-color);
         }
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             padding: 0 40px;
 
             border-radius: 0;
@@ -43,7 +43,7 @@
             }
         }
 
-        @include abstracts.breakpoint(sm) {
+        @include abstracts.screen(sm) {
             padding: 0 20px;
         }
     }
@@ -61,7 +61,7 @@
         border-right: 1px solid var(--top-menu-border-color);
         overflow-y: auto;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             width: 100%;
             height: auto;
             border-radius: none;
@@ -72,13 +72,12 @@
 .menu-column {
     display: flex;
     gap: 14px;
-    
-    
+
     + .menu-column {
         margin-top: 16px;
     }
-    
-    @include abstracts.breakpoint(lg) {
+
+    @include abstracts.screen(lg) {
         margin-top: 10px;
     }
 
@@ -88,11 +87,11 @@
         height: 36px;
         flex-shrink: 0;
 
-        @include abstracts.breakpoint(xl) {
+        @include abstracts.screen(xl) {
             display: none;
         }
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             display: block;
         }
     }
@@ -124,7 +123,7 @@
         line-height: 150%;
         margin-top: 6px;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             margin-bottom: 26px;
         }
     }
@@ -132,8 +131,8 @@
     &__list {
         margin-top: 19px;
 
-        @include abstracts.breakpoint(lg) {
-            margin-top: 0;;
+        @include abstracts.screen(lg) {
+            margin-top: 0;
         }
     }
 
@@ -169,7 +168,7 @@
     padding-left: var(--inner-padding);
     overflow-y: auto;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         position: initial;
         grid-template-columns: 1fr;
         padding-left: 0;
@@ -183,7 +182,7 @@
         height: var(--max-inner-height);
         padding-left: 0;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             grid-template-columns: 1fr;
             height: auto;
         }
