--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,3 +1,12 @@
 @forward "./logo";
 @forward"./dropdown";
 @forward "./slideshow";
+@forward "./cate-item";
+@forward "./button";
+@forward "./product-card";
+@forward "./filter-form";
+@forward "./form";
+
+
+
+
