--- a/scss/components/_slideshow.scss
+++ b/scss/components/_slideshow.scss
@@ -1,12 +1,7 @@
 @use "../abstracts";
 
 .slideshow {
-    margin: 40px 0;
     position: relative;
-
-    @include abstracts.breakpoint(md) {
-        margin: 30px 0;
-    }
 
     &__inner {
         display: flex;
@@ -19,7 +14,7 @@
         position: relative;
         flex-shrink: 0;
 
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             padding-top: 50%;
         }
     }
@@ -51,7 +46,7 @@
         line-height: 144.444%;
         color: var(--color);
 
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             font-size: 1.4rem;
             line-height: 142.857%;
         }
@@ -76,7 +71,7 @@
             border: 4px solid var(--color);
             border-radius: 50%;
 
-            @include abstracts.breakpoint(md) {
+            @include abstracts.screen(md) {
                 border-width: 3px;
             }
         }
