--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,7 +8,7 @@
 .header {
     background: var(--header-bg-color);
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         box-shadow: 0px 20px 60px 10px var(--header-shadow-color);
     }
 }
@@ -19,11 +19,11 @@
     padding: 30px 0;
     z-index: 1;
 
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
         padding: 20px 0;
     }
 
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
         padding: 16px 0;
         justify-content: space-between;
     }
@@ -32,11 +32,11 @@
 .navbar {
     margin-left: 129px;
 
-    @include abstracts.breakpoint(xl) {
+    @include abstracts.screen(xl) {
         margin-left: 28px;
     }
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         position: fixed;
         inset: 0 50% 0 0;
         z-index: 9;
@@ -60,20 +60,20 @@
         }
     }
 
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
         inset: 0 20% 0 0;
     }
 
     &__close-btn {
         display: none;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             display: block;
             padding: 10px 40px;
         }
 
-        @include abstracts.breakpoint(sm) {
-            padding: 0 20px 10px ;
+        @include abstracts.screen(sm) {
+            padding: 0 20px 10px;
         }
     }
 
@@ -81,7 +81,7 @@
         visibility: hidden;
         opacity: 0;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             position: fixed;
             inset: 0;
             background: rgba($color: #000000, $alpha: 0.4);
@@ -94,7 +94,7 @@
     &__list {
         @extend %flexItemCenter;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             flex-direction: column;
             align-items: flex-start;
 
@@ -103,11 +103,11 @@
             overscroll-behavior: contain;
         }
 
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             height: calc(100% - 142px);
         }
 
-        @include abstracts.breakpoint(sm) {
+        @include abstracts.screen(sm) {
             height: calc(100% - 124px);
         }
     }
@@ -117,7 +117,7 @@
             display: block;
         }
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             width: 100%;
 
             &:hover .dropdown {
@@ -140,14 +140,14 @@
         font-weight: 500;
         line-height: 146.667%;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             padding: 0 40px;
             justify-content: space-between;
             font-size: 1.6rem;
             line-height: 150%;
         }
 
-        @include abstracts.breakpoint(sm) {
+        @include abstracts.screen(sm) {
             padding: 0 20px;
             height: 44px;
         }
@@ -156,7 +156,7 @@
     &__arrow {
         margin-top: 3px;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             transform: rotate(-90deg);
             transition: rotate 0.3s;
         }
@@ -172,7 +172,7 @@
     gap: 20px;
     margin-left: auto;
 
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
         margin-left: 0;
     }
 
@@ -187,7 +187,7 @@
     }
 
     &__group--single {
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             display: none;
         }
     }
@@ -228,13 +228,13 @@
     height: 50px;
     padding: 0 40px;
     align-items: center;
- 
-    @include abstracts.breakpoint(sm) {
+
+    @include abstracts.screen(sm) {
         padding: 0 20px;
         height: 44px;
     }
 
-    &__title {    
+    &__title {
         font-size: 1.5rem;
         font-style: normal;
         font-weight: 500;
