--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -2,8 +2,8 @@
 
 html.dark {
     --text-color: #ffffff;
-    --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%)
-        saturate(0%) hue-rotate(281deg) brightness(106%) contrast(102%);
+    --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(281deg) brightness(106%)
+        contrast(102%);
 
     --body-bg: #292e39;
     --header-bg-color: #171c28;
@@ -11,7 +11,7 @@ html.dark {
     --top-action-group-shadow: rgba(0, 0, 0, 0.2);
     --top-action-separate: #ededf6;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         --header-bg-color: #171c28;
         --header-shadow-color: rgba(237, 237, 246, 0.2);
     }
@@ -19,13 +19,37 @@ html.dark {
     // Dropdown
     --dropdown-bg-color: #2f3441;
     --dropdown-showdown-color: rgba(23, 28, 40, 0.4);
-    --dropdown-arrow-color: brightness(0) saturate(100%) invert(16%) sepia(21%)
-        saturate(563%) hue-rotate(185deg) brightness(103%) contrast(91%);
+    --dropdown-arrow-color: brightness(0) saturate(100%) invert(16%) sepia(21%) saturate(563%) hue-rotate(185deg)
+        brightness(103%) contrast(91%);
     --top-menu-border-color: #171c28;
-    --menu-column-icon-color: brightness(0) saturate(100%) invert(88%) sepia(0%)
-        saturate(3116%) hue-rotate(204deg) brightness(104%) contrast(113%);
+    --menu-column-icon-color: brightness(0) saturate(100%) invert(88%) sepia(0%) saturate(3116%) hue-rotate(204deg)
+        brightness(104%) contrast(113%);
 
     // sidebar
     --sidebar-bg: #2f3441;
-    --sidebar-shadow: rgba(23, 28, 40, 0.40);
+    --sidebar-shadow: rgba(23, 28, 40, 0.4);
+
+    // category-item
+    --category-item-bg: #171C28;
+    --category-item-thumb-bg: #292E39;
+    --category-item-title: #fff;
+
+    // filter btn
+    --filter-btn-color: #fff;
+    --filter-btn-bg: #171C28;
+    --filter-form-bg: var(--dropdown-bg-color);
+    --filter-form-shadow: rgba(0, 0, 0, 0.40);
+
+    --filter-form-tag-bg: #171C28;
+    --filter-form-arrow: var(--dropdown-arrow-color);
+    --filter-form-footer-bg: var(--dropdown-bg-color);
+
+    // products card
+    --product-card-bg: #171C28;
+    --product-card-shadow: rgba(0, 0, 0, 0.20);
+
+    --like-btn-shadow:rgba(124, 124, 124, 0.20);
+
+    // footer
+    --footer-bg-color: var(--header-bg-color);
 }
