--- a/templates/header.html
+++ b/templates/header.html
@@ -6,9 +6,9 @@
         </button>
 
         <!-- Logo -->
-        <a href="./" class="logo">
-            <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img" />
-            <h1 class="logo__title">grocerymart</h1>
+        <a href="./" class="logo top-bar__logo">
+            <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img top-bar__logo-img" />
+            <h1 class="logo__title top-bar__logo-title">grocerymart</h1>
         </a>
 
         <!-- Navbar -->
@@ -17,7 +17,7 @@
                 <img class="icon" src="./assets/icons/arrow-left.svg" alt="" />
             </button>
 
-            <a href="#!" class="navbar-btn d-none d-md-flex">
+            <a href="./checkout.html" class="navbar-btn d-none d-md-flex">
                 <img src="./assets/icons/buy.svg" alt="" class="navbar-btn__icon icon" />
                 <span class="navbar-btn__title">Card</span>
                 <span class="navbar-btn__qnt">3</span>
@@ -4546,8 +4546,8 @@
 
         <!-- Actions -->
         <div class="top-act">
-            <a href="./sign-in.html" class="btn btn--text">Sign in</a>
-            <a href="./sign-up.html" class="btn btn--primary">Sign up</a>
+            <a href="./sign-in.html" class="btn btn--text d-md-none">Sign in</a>
+            <a href="./sign-up.html" class=" btn top-act__sign-up btn--primary">Sign up</a>
         </div>
     </div>
 </div>
