--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,6 +1,19 @@
+@use "../abstracts";
+
+$error--color: #ed4337;
+
 .form {
+    &:has(:invalid) &__submit-btn {
+        pointer-events: none;
+        opacity: 0.5;
+    }
+
     &__group {
         margin-top: 30px;
+
+        @include abstracts.screen(md) {
+            margin-top: 20px;
+        }
 
         &--inline {
             display: flex;
@@ -8,35 +21,213 @@
         }
     }
 
+    &__group:has(:invalid):has(&__input:not(:placeholder-shown)) {
+        .form__text-input {
+            border-color: $error--color;
+            background: rgba($color: $error--color, $alpha: 0.1);
+        }
+
+        .form__input-icon-error,
+        .form__error {
+            display: block;
+        }
+
+        .form__input-icon {
+            display: none;
+        }
+    }
+
+    &__text-area,
     &__text-input {
         display: flex;
         align-items: center;
-
-        height: 50px;
         padding: 0 12px;
         border-radius: 10px;
         border: 1.5px solid #d2d1d6;
-
         &:focus-within {
             border-color: #77dae6;
         }
     }
 
-    &__input {
+    &__text-area {
+        height: 120px;
+        padding: 12px;
+
+        &--small {
+            height: 100px;
+        }
+
+        &-input {
+            width: 100%;
+            resize: none;
+        }
+    }
+
+    &__text-input {
+        height: 50px;
+        position: relative;
+
+        &--small {
+            height: 42px;
+        }
+
+        @include abstracts.screen(md) {
+            height: 48px;
+        }
+    }
+
+    &__input,
+    &__text-area-input {
         flex: 1;
         height: 100%;
-
         font-size: 1.8rem;
         font-weight: 500;
         line-height: 144.444%;
 
+        &::placeholder {
+            color: var(--form-placeholder-color);
+        }
+
+        @include abstracts.screen(md) {
+            font-size: 1.6rem;
+        }
+    }
+
+    &__input {
+        width: 100%;
+
         &-icon {
             margin-left: 12px;
         }
+    }
 
-        &::placeholder {
-            color: #d2d1d6;
+    &__select-dialog {
+        position: absolute;
+        bottom: 44px;
+        left: 10px;
+
+        display: flex;
+        flex-direction: column;
+        z-index: 1;
+
+        opacity: 0;
+        visibility: hidden;
+        translate: 0 -8px;
+
+        transition: opacity, visibility, translate;
+        transition-duration: 0.2s;
+
+        background: var(--form-select-dialog-bg);
+        border: 1px solid #d2d1d6;
+        box-shadow: 0 0 5px var(--form-select-dialog-shadow);
+
+        min-width: 230px;
+        max-height: 310px;
+        border-radius: 10px;
+        padding-bottom: 10px;
+
+        &.show {
+            visibility: visible;
+            opacity: 1;
+            translate: 0;
         }
+
+        @include abstracts.screen(sm) {
+            position: fixed;
+            max-width: initial;
+            max-height: initial;
+            inset: 0;
+            border-radius: 0;
+        }
+    }
+
+    &__close-dialog {
+        position: absolute;
+        font-size: 3rem;
+        padding: 2px 19px;
+        top: 0;
+        right: 0;
+    }
+
+    &__dialog-heading {
+        font-size: 1.8rem;
+        font-weight: 600;
+        text-align: center;
+        padding: 14px;
+    }
+
+    &__search {
+        display: flex;
+        flex-shrink: 0;
+        padding: 0 20px;
+        align-items: center;
+        padding-bottom: 5px;
+        border-bottom: 1px solid #d2d1d6;
+        height: 38px;
+
+        @include abstracts.screen(lg) {
+            height: 42px;
+        }
+
+        @include abstracts.screen(sm) {
+            margin: 10px 20px 0;
+            border: 1px solid #d2d1d6;
+            border-radius: 10px;
+            padding: 0 16px;
+        }
+
+        &-input {
+            flex: 1;
+            height: 100%;
+            font-size: 1.6rem;
+        }
+
+        &-icon {
+            width: 18px;
+            height: 18px;
+            margin-left: 10px;
+        }
+    }
+
+    &__options-list {
+        flex: 1;
+        overflow-y: auto;
+        margin-top: 10px;
+        overscroll-behavior: contain;
+    }
+
+    &__option {
+        padding: 8px 20px;
+        font-size: 1.4rem;
+
+        &--current {
+            background: rgb(255, 183, 0, 0.6);
+            font-weight: 500;
+        }
+
+        &:not(&--current):hover {
+            background: var(--form-option-hover);
+            cursor: pointer;
+        }
+
+        @include abstracts.screen(lg) {
+            padding: 14px 20px;
+        }
+    }
+
+    &__error {
+        text-align: left;
+        font-size: 1.4rem;
+        font-weight: 500;
+        color: $error--color;
+        margin-top: 10px;
+        display: none;
+    }
+
+    &__input-icon-error {
+        display: none;
+        margin-left: 12px;
+        animation: shake 0.5s;
     }
 
     &__pull-right {
@@ -44,15 +235,181 @@
     }
 
     &__checkbox {
+        position: relative;
+
         display: flex;
         align-items: center;
-        gap: 10px;
+        user-select: none;
 
         &-label {
+            margin-left: 29px;
             color: #9e9da8;
             font-size: 1.5rem;
             font-weight: 500;
             line-height: 146.667%;
+            color: var(--form-label-color);
+
+            @include abstracts.screen(md) {
+                font-size: 1.4rem;
+            }
+        }
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+        }
+
+        &::before {
+            width: 19px;
+            height: 19px;
+            border-radius: 5px;
+            border: 1.5px solid #9e9da8;
+        }
+
+        &::after {
+            width: 15px;
+            height: 8px;
+            border: 3px solid;
+            border-color: transparent transparent #fff #fff;
+            rotate: -45deg;
+            left: 2px;
+            top: 5px;
+            display: none;
+        }
+    }
+
+    &__checkbox:has(:checked) {
+        &::before {
+            border: #ffb700;
+            background: #ffb700;
+        }
+
+        &::after {
+            display: block;
+        }
+    }
+
+    &__label {
+        display: block;
+        font-size: 22px;
+        font-weight: 500;
+        line-height: 145.455%;
+
+        &--small {
+            font-size: 14px;
+            line-height: 142.857%;
+            margin-bottom: 10px;
+            font-weight: 500;
+        }
+    }
+
+    &__slider {
+        position: relative;
+
+        height: 2px;
+        width: 100%;
+        background: #d2d1d6;
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            translate: 0 -50%;
+            top: 50%;
+
+            width: 22px;
+            height: 22px;
+
+            border-radius: 50%;
+            border: 6px solid #ffb700;
+            background: var(--filter-form-bg);
+        }
+
+        &::before {
+            left: var(--min-value);
+        }
+
+        &::after {
+            left: var(--max-value);
+        }
+    }
+
+    &__select-wrap {
+        height: 45px;
+        display: flex;
+        align-items: center;
+        border-radius: 6px;
+        border: 1px solid #d2d1d6;
+    }
+
+    &__select {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        padding: 0 14px;
+        min-width: var(--width, 108px);
+        height: calc(100% - 10px);
+
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 142.857%;
+
+        cursor: pointer;
+
+        @include abstracts.screen(xl) {
+            flex: 1;
+        }
+    }
+
+    &__select + &__select {
+        border-left: 1px solid #d2d1d6;
+    }
+
+    &__tags {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px 20px;
+
+        @include abstracts.screen(xl) {
+            gap: 8px;
+        }
+    }
+
+    &__tag {
+        border-radius: 6px;
+        padding: 6px 12px;
+
+        color: #9e9da8;
+        background: var(--form-tag-bg);
+
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 142.857%;
+
+        transition: color 0.2s;
+
+        &:hover {
+            color: var(--text-color);
+        }
+    }
+
+    &__row {
+        display: flex;
+        gap: 30px;
+
+        @include abstracts.screen(md) {
+            gap: 20px;
+        }
+
+        @include abstracts.screen(sm) {
+            flex-direction: column;
+            gap: 0;
+        }
+
+        > * {
+            flex: 1;
         }
     }
 }
