--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -6,6 +6,18 @@
 @forward "./product-card";
 @forward "./filter-form";
 @forward "./form";
+@forward "./message";
+@forward "./breadcrumbs";
+@forward "./search-bar";
+@forward "./review-card";
+@forward "./text-content";
+@forward "./modal";
+
+
+
+
+
+
 
 
 
