--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -27,6 +27,29 @@
         padding: 16px 0;
         justify-content: space-between;
     }
+
+    &__logo {
+        @include abstracts.screen(lg) {
+            gap: 10px !important;
+            margin-left: 40px;
+
+            &-title {
+                font-size: 1.8rem !important;
+            }
+
+            &-img {
+                width: 24px;
+            }
+        }
+
+        @include abstracts.screen(md) {
+            margin-left: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            translate: -50% -50%;
+        }
+    }
 }
 
 .navbar {
@@ -174,6 +197,12 @@
 
     @include abstracts.screen(md) {
         margin-left: 0;
+
+        &__sign-up {
+            height: 40px !important;
+            padding: 0 8px !important;
+            font-size: 1.5rem !important;
+        }
     }
 
     &__group {
@@ -194,6 +223,14 @@
 
     &__group--single &__btn {
         padding: 13px;
+    }
+
+    &__btn-wrap {
+        position: relative;
+
+        &:hover .act-dropdown {
+            display: block
+        }
     }
 
     &__btn {
@@ -245,5 +282,135 @@
     &__qnt {
         @extend .navbar-btn__title;
         margin-left: auto;
+    }
+}
+
+.act-dropdown {
+    position: absolute;
+    z-index: 1;
+    top: 48px;
+    right: -60px;
+    width: min(500px, 100vw);
+    padding-top: 28px;
+    display: none;
+
+    &__inner {
+        position: relative;
+        padding: 30px;
+        border-radius: 2rem;
+        background: var(--header-act-dropdown-bg);
+        box-shadow: 0px 40px 90px 20px var(--header-acr-shadow-color);
+    }
+
+    &__arrow {
+        position: absolute;
+        top: -14px;
+        right: 90px;
+        height: 20.5px;
+        filter: var(--dropdown-arrow-color);
+    }
+
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    &__title {
+        font-size: 2.2rem;
+        font-weight: 500;
+        line-height: 145.455%;
+    }
+
+    &__view-all {
+        font-size: 2.2rem;
+        font-weight: 400;
+        line-height: 145.455%;
+        color: #0071dc;
+    }
+
+    &__bottom {
+        margin: 20px 0;
+        border-width: 1px 0;
+        border-color: var(--act-dropdown-bottom-border-color);
+        border-style: solid;
+        padding: 20px 0;
+    }
+
+    &__separate {
+        background-color: var(--act-dropdown-bottom-border-color);
+        height: 1px;
+        margin: 20px 0;
+    }
+
+    &__row {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-weight: 400;
+
+        &--bold {
+            font-weight: 500;
+        }
+    }
+
+    &__row + &__row {
+        margin-top: 15px;
+    }
+
+    &__label,
+    &__value {
+        font-size: 1.8rem;
+        line-height: 145.455%;
+    }
+
+    &__checkout {
+        display: flex;
+        justify-content: flex-end;
+
+        &-btn {
+            min-width: 278px !important;
+        }
+    }
+
+    &__list {
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        padding-bottom: 10px;
+    }
+}
+
+.card-preview-item {
+    text-align: left;
+
+    &__img-wrap {
+        padding-top: 100%;
+        position: relative;
+        border: 1.5px solid var(--card-peview-border-color);
+        border-radius: 10px;
+    }
+
+    &__thumbs {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    &__title {
+        margin-top: 14px;
+        font-size: 1.4rem;
+        font-weight: 400;
+        line-height: 142.857%;
+    }
+
+    &__price {
+        margin-top: 6px;
+        font-size: 1.5rem;
+        font-weight: 500;
+        line-height: 146.667%;
     }
 }
