--- a/scss/pages/_auth.scss
+++ b/scss/pages/_auth.scss
@@ -1,30 +1,76 @@
+@use "../abstracts";
+
 .auth {
     display: flex;
     min-height: 100vh;
 
+    @supports (-webkit-touch-callout: none) {
+        min-height: -webkit-fill-available;
+    }
+
     &__intro,
     &__content {
         flex: 1;
+        padding: 0 30px;
     }
 
     &__intro {
-        display: flex;
+        position: relative;
+
         flex-direction: column;
+        display: flex;
         align-items: center;
         justify-content: center;
+        background: var(--auth-intro-bg);
         gap: 50px;
 
-        &-text {
+        &--text {
             max-width: 412px;
             text-align: center;
             font-size: 1.8rem;
             font-weight: 500;
             line-height: 144.444%;
+            color: var(--auth-intro-text-color);
+
+            @include abstracts.screen(md) {
+                font-size: 1.5rem;
+            }
+        }
+
+        &--img {
+            width: min(424px, 100%);
+        }
+
+        &--logo,
+        &-next {
+            position: absolute;
+            left: 50%;
+            translate: -50%;
+        }
+
+        &--logo {
+            top: 80px;
+        }
+
+        &-next {
+            bottom: 50px;
         }
     }
 
     &__content {
         background: var(--auth-content-bg);
+
+        @include abstracts.screen(md) {
+            overflow-y: auto;
+            position: fixed;
+            inset: 0;
+            z-index: 1;
+            transition: translate 0.3s;
+
+            &.hide {
+                translate: 100%;
+            }
+        }
 
         &-inner {
             display: flex;
@@ -35,6 +81,10 @@
             width: min(460px, 100%);
             margin: 0 auto;
             padding: 50px 0;
+
+            @include abstracts.screen(md) {
+                padding: 32px 0;
+            }
         }
     }
 
@@ -43,20 +93,38 @@
         font-size: 3rem;
         font-weight: 500;
         line-height: 146.667%;
+        color: var(--auth-content-heading);
+
+        @include abstracts.screen(md) {
+            margin-top: 40px;
+            font-size: 2.2rem;
+        }
     }
 
     &__desc {
         margin-top: 10px;
-        padding: 0 30px;
+        padding: 0 20px;
         color: #9e9da8;
         font-size: 1.5rem;
         font-weight: 500;
         line-height: 146.667%;
+
+        @include abstracts.screen(md) {
+            font-size: 1.4rem;
+        }
     }
 
     &__form {
         width: 100%;
         margin-top: 30px;
+
+        @include abstracts.screen(md) {
+            margin-top: 0px;
+        }
+
+        &--forgot {
+            margin-top: 10px;
+        }
     }
 
     &__link {
@@ -64,6 +132,10 @@
         font-size: 1.5rem;
         font-weight: 500;
         line-height: 146.667%;
+
+        @include abstracts.screen(md) {
+            font-size: 1.4rem;
+        }
     }
 
     &__btn-group {
@@ -71,6 +143,11 @@
         flex-direction: column;
         gap: 30px;
         margin-top: 50px;
+
+        @include abstracts.screen(md) {
+            margin-top: 40px;
+            gap: 20px;
+        }
     }
 
     &__btn {
@@ -82,5 +159,23 @@
         color: #9e9da8;
         font-size: 1.8rem;
         line-height: 144.444%;
+
+        @include abstracts.screen(md) {
+            font-size: 1.6rem;
+            margin-top: 40px;
+        }
+
+        &-link {
+            font-size: inherit;
+        }
+    }
+
+    &__bottom {
+        border: 1px solid var(--auth-border-btn-color);
+        background: transparent;
+    }
+
+    &__message {
+        margin-top: 30px;
     }
 }
