--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -16,6 +16,10 @@ html.dark {
         --header-shadow-color: rgba(237, 237, 246, 0.2);
     }
 
+    // header
+    --header-act-dropdown-bg: #2f3441;
+    --header-acr-shadow-color: rgba(23, 28, 40, 0.4);
+
     // Dropdown
     --dropdown-bg-color: #2f3441;
     --dropdown-showdown-color: rgba(23, 28, 40, 0.4);
@@ -25,31 +29,94 @@ html.dark {
     --menu-column-icon-color: brightness(0) saturate(100%) invert(88%) sepia(0%) saturate(3116%) hue-rotate(204deg)
         brightness(104%) contrast(113%);
 
+    --act-dropdown-bottom-border-color: #171C28;
+
     // sidebar
     --sidebar-bg: #2f3441;
     --sidebar-shadow: rgba(23, 28, 40, 0.4);
 
     // category-item
-    --category-item-bg: #171C28;
-    --category-item-thumb-bg: #292E39;
+    --category-item-bg: #171c28;
+    --category-item-thumb-bg: #292e39;
     --category-item-title: #fff;
 
     // filter btn
     --filter-btn-color: #fff;
-    --filter-btn-bg: #171C28;
+    --filter-btn-bg: #171c28;
     --filter-form-bg: var(--dropdown-bg-color);
-    --filter-form-shadow: rgba(0, 0, 0, 0.40);
+    --filter-form-shadow: rgba(0, 0, 0, 0.4);
 
-    --filter-form-tag-bg: #171C28;
+    --form-tag-bg: #171c28;
     --filter-form-arrow: var(--dropdown-arrow-color);
     --filter-form-footer-bg: var(--dropdown-bg-color);
 
     // products card
-    --product-card-bg: #171C28;
-    --product-card-shadow: rgba(0, 0, 0, 0.20);
+    --product-card-bg: #171c28;
+    --product-card-shadow: rgba(0, 0, 0, 0.2);
 
-    --like-btn-shadow:rgba(124, 124, 124, 0.20);
+    --like-btn-shadow: rgba(124, 124, 124, 0.2);
 
     // footer
     --footer-bg-color: var(--header-bg-color);
+
+    // auth
+    --auth-content-bg: #292e39;
+    --auth-intro-bg: #171c28;
+    --auth-intro-text-color: #b9babe;
+    --auth-content-heading: #b9babe;
+    --auth-border-btn-color: #b9babe;
+
+    @include abstracts.screen(md) {
+    }
+
+    // form
+    --form-placeholder-color: #b9babe;
+    --form-label-color: #b9babe;
+    --form-select-dialog-shadow: rgba($color: #000000, $alpha: 0.15);
+    --form-select-dialog-bg: #2f3441;
+    --form-option-hover: #292e39;
+
+    // product
+    --product-detail-bg: #292e39;
+    --product-detail-info-bg: #171c28;
+    --product-info-container-bg: #292e39;
+    --product-deatail-tag-bg: #292e39;
+
+    @include abstracts.screen(md) {
+        --product-detail-bg: #292e39;
+        --product-detail-info-bg: transparent;
+        --product-info-container-bg: #171c28;
+    }
+
+    // breadcrumbs
+    --breadcrumbs-bg: #171c28;
+    --breadcrumb-shadow-bg: rgba(23, 28, 40, 0.2);
+
+    @include abstracts.screen(md) {
+        --breadcrumbs-bg: #171c28;
+    }
+
+    // search bar
+    --search-bar-bg: #171c28;
+
+    // review card
+    --review-card-bg: #171c28;
+
+    // text-content
+    --text-content-bg-hr: #414349;
+
+     // card preview
+     --card-peview-border-color: #171c28;
+
+     // checkout
+    --checkout-breadcrumb-bg: #171c28;
+    --checkout-card-info-bg: #171c28;
+    --card-info-shadow: rgba(23, 28, 40, 0.20);
+    --checkout-border-color: #292e39;
+    --checkout-gift-shadow: rgba(23, 28, 40, 0.20);
+    --checkout-checkbox-color: var(--icon-color);
+
+      // dialog
+      --modal-content-bg: #2f3441;
+      --modal-content-shadow-color: rgba(23, 28, 40, 0.4);
 }
