--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,24 +1,20 @@
 @forward "./logo";
-@forward"./dropdown";
+@forward "./dropdown";
 @forward "./slideshow";
 @forward "./cate-item";
 @forward "./button";
-@forward "./product-card";
+@forward "./product-cart";
 @forward "./filter-form";
 @forward "./form";
 @forward "./message";
 @forward "./breadcrumbs";
 @forward "./search-bar";
-@forward "./review-card";
+@forward "./review-cart";
 @forward "./text-content";
 @forward "./modal";
-
-
-
-
-
-
-
+@forward "./payment-card";
+@forward "./account-info";
+@forward "./favorite-item";
 
 
 
