--- a/scss/components/_product-cart.scss
+++ b/scss/components/_product-cart.scss
@@ -1,11 +1,11 @@
-.product-card {
+.product-cart {
     display: flex;
     flex-direction: column;
 
     padding: 16px;
     border-radius: 20px;
-    background: var(--product-card-bg);
-    box-shadow: 0px 20px 60px 10px var(--product-card-shadow);
+    background: var(--product-cart-bg);
+    box-shadow: 0px 20px 60px 10px var(--product-cart-shadow);
     height: 100%;
 
     &__img-wrap {
@@ -31,7 +31,7 @@
     &__title {
         margin-top: 16px;
     }
-    
+
     &__brand {
         font-size: 15px;
         font-weight: 400;
@@ -39,7 +39,7 @@
         color: #9e9da8;
         margin: 16px 0;
     }
-    
+
     &__title,
     &__price,
     &__score {
