--- a/scss/components/_search-bar.scss
+++ b/scss/components/_search-bar.scss
@@ -1,3 +1,5 @@
+@use "../abstracts";
+
 .search-bar {
     align-items: center;
     height: 50px;
@@ -7,7 +9,7 @@
     &__input {
         flex: 1;
         padding-left: 15px;
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         font-weight: 500;
         line-height: 142.857%;
         height: 100%;
