--- a/scss/components/_text-content.scss
+++ b/scss/components/_text-content.scss
@@ -74,9 +74,9 @@
     }
 
     blockquote {
-        background: rgba($color: #77DAE6, $alpha: 0.1) ;
+        background: rgba($color: #77dae6, $alpha: 0.1);
         padding: 20px;
-        border-left: 3px solid #77DAE6;
+        border-left: 3px solid #77dae6;
 
         p {
             margin: 0;
@@ -85,7 +85,7 @@
 
     hr {
         border: none;
-        height: 1.5px;
+        height: 1px;
         background: var(--text-content-bg-hr);
         margin: 40px 0;
     }
