--- a/scss/pages/_checkout.scss
+++ b/scss/pages/_checkout.scss
@@ -19,20 +19,41 @@
     }
 }
 
-.card-info {
+.cart-info {
     padding: 30px;
     border-radius: 20px;
-    background: var(--checkout-card-info-bg);
-    box-shadow: 0px 20px 60px 10px var(--card-info-shadow);
+    background: var(--checkout-cart-info-bg);
+    box-shadow: 0px 20px 60px 10px var(--cart-info-shadow);
 
     @include abstracts.screen(md) {
         padding: 16px;
+    }
+
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 30px;
     }
 
     &__heading {
         font-size: 2.4rem;
         font-weight: 700;
         line-height: 141.667%;
+
+        &--lv2 {
+            font-size: 2.2rem;
+            font-weight: 500;
+            line-height: 145.455%;
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    &__desc {
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 146.667%;
     }
 
     &__sub-heading {
@@ -52,6 +73,15 @@
 
     &__bottom {
         margin-top: 30px;
+
+        &--row {
+            @include abstracts.screen(md) {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start !important;
+                gap: 16px;
+            }
+        }
     }
 
     &__continue {
@@ -103,26 +133,77 @@
         }
     }
 
+    &__form-row {
+        flex-direction: row;
+        gap: 20px;
+    }
+
     &__separate {
         height: 1px;
         background: var(--checkout-border-color);
         margin: 30px 0;
     }
+
+    &__edit-btn {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 1.8rem;
+        font-weight: 400;
+        line-height: 144.444%;
+    }
+
+    &__checkbox {
+        &-input {
+            appearance: none;
+
+            &::before {
+                content: url("../icons/checkbox-uncheck.svg");
+            }
+
+            &:not(:checked)::before {
+                filter: var(--icon-color);
+            }
+
+            &:checked::before {
+                content: url("../icons/checkbox-check.svg");
+            }
+        }
+    }
+
+    &__form {
+        margin-bottom: 30px;
+    }
+
+    &__check-all {
+        margin: 30px 0;
+    }
+
+    &__checkout-all {
+        @include abstracts.screen(sm) {
+            width: 100%;
+        }
+    }
+
+    &__back-arrow {
+        width: 50px;
+        padding-right: 20px;
+        position: relative;
+        top: 3px;
+    }
 }
 
-.card-info + .card-info {
+.cart-info + .cart-info {
     margin-top: 30px;
 }
 
-.card-item {
+.cart-item {
     display: flex;
-    gap: 30px;
     padding: 30px 0;
     border-bottom: 1px solid var(--checkout-border-color);
 
     @include abstracts.screen(md) {
         padding: 16px 0;
-        gap: 16px;
 
         &:last-child {
             border: none;
@@ -133,6 +214,7 @@
         width: 172px;
         height: 172px;
         object-fit: contain;
+        margin: 0 30px 0 20px;
 
         @include abstracts.screen(xxl) {
             width: 150px;
@@ -146,6 +228,7 @@
 
         @include abstracts.screen(md) {
             width: 60px;
+            margin: 0 16px;
             height: 60px;
         }
     }
@@ -200,6 +283,10 @@
         margin-top: auto;
         min-height: 44px;
 
+        @include abstracts.screen(md) {
+            gap: 10px;
+        }
+
         &--md-block {
             @include abstracts.screen(md) {
                 flex-direction: column;
@@ -249,6 +336,26 @@
 
         &:first-child {
             margin-right: 10px;
+        }
+    }
+
+    &__ctrl-wrap {
+        display: flex;
+        align-items: center;
+        gap: 30px;
+
+        @include abstracts.screen(xl) {
+            flex-direction: column;
+            gap: 15px;
+            align-items: flex-start;
+        }
+    }
+
+    &__checkout-btn {
+        margin-top: auto;
+
+        @include abstracts.screen(md) {
+            max-width: 200px;
         }
     }
 }
@@ -328,16 +435,13 @@
             height: 46px;
         }
     }
-
-    &__list {
-    }
 }
 
-.address-card {
+.address-cart {
     margin-top: 30px;
     display: flex;
     gap: 16px;
-    
+
     @include abstracts.screen(md) {
         flex-direction: column;
     }
@@ -385,32 +489,90 @@
         height: 100%;
         display: flex;
         align-items: flex-end;
+    }
+}
 
-        &-btn {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 1.8rem;
-            font-weight: 400;
-            line-height: 144.444%;
+.payment-item {
+    display: flex;
+    align-items: center;
+
+    margin-top: 30px;
+    padding: 20px;
+    border-radius: 20px;
+    background: var(--checkout-payment-item-bg-color);
+
+    @include abstracts.screen(sm) {
+        align-items: initial;
+    }
+
+    &--pointer {
+        cursor: pointer;
+    }
+
+    &__content {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        margin-left: 20px;
+        gap: 20px;
+
+        @include abstracts.screen(sm) {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 4px;
         }
     }
 
+    &__info {
+        flex: 1;
+    }
+
+    &__title {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 144.444%;
+    }
+
+    &__desc,
+    &__detail {
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 146.667%;
+    }
+
+    &__desc {
+        margin-top: 4px;
+    }
+
+    &__detail {
+        margin-right: -8px;
+        color: #0071dc;
+        font-weight: 500;
+        text-decoration: underline;
+        padding: 8px;
+    }
+
+    &__thumb {
+        width: 70px;
+        height: 54px;
+        object-fit: cover;
+    }
+
+    &__cost {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 144.444%;
+        color: #9e9da8;
+    }
+
     &__checkbox {
-        &-input {
-            appearance: none;
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+        gap: 14px;
+    }
 
-            &::before {
-                content: url("../icons/checkbox-uncheck.svg");
-            }
-
-            &:not(:checked)::before {
-                filter: var(--icon-color);
-            }
-
-            &:checked::before {
-                content: url("../icons/checkbox-check.svg");
-            }
-        }
+    &__checkbox-input:checked + &__cost {
+        color: inherit;
     }
 }
