--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -2,5 +2,9 @@
 @forward "./auth";
 @forward "./products-detail";
 @forward "./checkout";
+@forward "./profile";
+@forward "./add-new-card";
+
+
 
 
