--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -19,7 +19,7 @@
 
             <a href="#!" class="navbar-btn d-none d-md-flex">
                 <img src="./assets/icons/buy.svg" alt="" class="navbar-btn__icon icon" />
-                <span class="navbar-btn__title">Card</span>
+                <span class="navbar-btn__title">Cart</span>
                 <span class="navbar-btn__qnt">3</span>
             </a>
 
@@ -3097,8 +3097,8 @@
                                                     </div>
                                                 </li>
                                                 <li class="menu-column__item">
-                                                    <a href="#!" class="menu-column__link">Gift Cards</a>
-                                                    <!-- Sub menu for "Gift Cards" -->
+                                                    <a href="#!" class="menu-column__link">Gift carts</a>
+                                                    <!-- Sub menu for "Gift carts" -->
                                                     <div class="sub-menu">
                                                         <div class="sub-menu__column">
                                                             <!-- Menu column 1 -->
@@ -4561,63 +4561,63 @@
                     <!-- dropdown -->
                     <div class="act-dropdown">
                         <div class="act-dropdown__inner">
-                            <img src="./assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow">
+                            <img src="./assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow" />
                             <div class="act-dropdown__top">
                                 <h2 class="act-dropdown__title">You have 3 item(S)</h2>
-                                <a href="./checkout.html" class="act-dropdown__view-all">See all</a>
+                                <a href="./favorite.html" class="act-dropdown__view-all">See all</a>
                             </div>
-    
+
                             <div class="row row-cols-3 gx-2 act-dropdown__list">
-                                <!-- Card preview item 1 -->
+                                <!-- cart preview item 1 -->
                                 <div class="col">
-                                    <article class="card-preview-item">
-                                        <div class="card-preview-item__img-wrap">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
                                             <img
                                                 src="./assets/img/product/item 1.png"
                                                 alt=""
-                                                class="card-preview-item__thumbs"
+                                                class="cart-preview-item__thumbs"
                                             />
                                         </div>
-                                        <h3 class="card-preview-item__title">Lavazza Coffee Blends</h3>
-                                        <p class="card-preview-item__price">$329.00</p>
+                                        <h3 class="cart-preview-item__title">Lavazza Coffee Blends</h3>
+                                        <p class="cart-preview-item__price">$329.00</p>
                                     </article>
                                 </div>
-    
-                                <!-- Card preview item 2 -->
+
+                                <!-- cart preview item 2 -->
                                 <div class="col">
-                                    <article class="card-preview-item">
-                                        <div class="card-preview-item__img-wrap">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
                                             <img
                                                 src="./assets/img/product/item 2.png"
                                                 alt=""
-                                                class="card-preview-item__thumbs"
+                                                class="cart-preview-item__thumbs"
                                             />
                                         </div>
-                                        <h3 class="card-preview-item__title">Coffee Beans Espresso</h3>
-                                        <p class="card-preview-item__price">$39.99</p>
+                                        <h3 class="cart-preview-item__title">Coffee Beans Espresso</h3>
+                                        <p class="cart-preview-item__price">$39.99</p>
                                     </article>
                                 </div>
-    
-                                <!-- Card preview item 3 -->
+
+                                <!-- cart preview item 3 -->
                                 <div class="col">
-                                    <article class="card-preview-item">
-                                        <div class="card-preview-item__img-wrap">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
                                             <img
                                                 src="./assets/img/product/item 3.png"
                                                 alt=""
-                                                class="card-preview-item__thumbs"
+                                                class="cart-preview-item__thumbs"
                                             />
                                         </div>
-                                        <h3 class="card-preview-item__title">Qualità Oro Mountain</h3>
-                                        <p class="card-preview-item__price">$47.00</p>
+                                        <h3 class="cart-preview-item__title">Qualità Oro Mountain</h3>
+                                        <p class="cart-preview-item__price">$47.00</p>
                                     </article>
                                 </div>
                             </div>
-                            <div class="act-dropdown__separate">
-                                
-                            </div>
+                            <div class="act-dropdown__separate"></div>
                             <div class="act-dropdown__checkout">
-                                <a href="./checkout.html" class="btn btn--primary btn--rounded act-dropdown__checkout-btn"
+                                <a
+                                    href="./checkout.html"
+                                    class="btn btn--primary btn--rounded act-dropdown__checkout-btn"
                                     >Check Out All</a
                                 >
                             </div>
@@ -4631,61 +4631,59 @@
                     <button class="top-act__btn">
                         <img src="./assets/icons/buy.svg" alt="" class="icon top-act__icon" />
                         <span class="top-act__title">$65.42</span>
-    
-                        
                     </button>
                     <!-- dropdown -->
                     <div class="act-dropdown">
                         <div class="act-dropdown__inner">
-                            <img src="./assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow">
+                            <img src="./assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow" />
                             <div class="act-dropdown__top">
-                                <h2 class="act-dropdown__title">You have 3 item</h2>
+                                <h2 class="act-dropdown__title">You have 3 item (s)</h2>
                                 <a href="./checkout.html" class="act-dropdown__view-all">See all</a>
                             </div>
-    
+
                             <div class="row row-cols-3 gx-2 act-dropdown__list">
-                                <!-- Card preview item 1 -->
+                                <!-- cart preview item 1 -->
                                 <div class="col">
-                                    <article class="card-preview-item">
-                                        <div class="card-preview-item__img-wrap">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
                                             <img
                                                 src="./assets/img/product/item 1.png"
                                                 alt=""
-                                                class="card-preview-item__thumbs"
+                                                class="cart-preview-item__thumbs"
                                             />
                                         </div>
-                                        <h3 class="card-preview-item__title">Lavazza Coffee Blends</h3>
-                                        <p class="card-preview-item__price">$329.00</p>
+                                        <h3 class="cart-preview-item__title">Lavazza Coffee Blends</h3>
+                                        <p class="cart-preview-item__price">$329.00</p>
                                     </article>
                                 </div>
-    
-                                <!-- Card preview item 2 -->
+
+                                <!-- cart preview item 2 -->
                                 <div class="col">
-                                    <article class="card-preview-item">
-                                        <div class="card-preview-item__img-wrap">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
                                             <img
                                                 src="./assets/img/product/item 2.png"
                                                 alt=""
-                                                class="card-preview-item__thumbs"
+                                                class="cart-preview-item__thumbs"
                                             />
                                         </div>
-                                        <h3 class="card-preview-item__title">Coffee Beans Espresso</h3>
-                                        <p class="card-preview-item__price">$39.99</p>
+                                        <h3 class="cart-preview-item__title">Coffee Beans Espresso</h3>
+                                        <p class="cart-preview-item__price">$39.99</p>
                                     </article>
                                 </div>
-    
-                                <!-- Card preview item 3 -->
+
+                                <!-- cart preview item 3 -->
                                 <div class="col">
-                                    <article class="card-preview-item">
-                                        <div class="card-preview-item__img-wrap">
+                                    <article class="cart-preview-item">
+                                        <div class="cart-preview-item__img-wrap">
                                             <img
                                                 src="./assets/img/product/item 3.png"
                                                 alt=""
-                                                class="card-preview-item__thumbs"
+                                                class="cart-preview-item__thumbs"
                                             />
                                         </div>
-                                        <h3 class="card-preview-item__title">Qualità Oro Mountain</h3>
-                                        <p class="card-preview-item__price">$47.00</p>
+                                        <h3 class="cart-preview-item__title">Qualità Oro Mountain</h3>
+                                        <p class="cart-preview-item__price">$47.00</p>
                                     </article>
                                 </div>
                             </div>
@@ -4708,7 +4706,9 @@
                                 </div>
                             </div>
                             <div class="act-dropdown__checkout">
-                                <a href="./checkout.html" class="btn btn--primary btn--rounded act-dropdown__checkout-btn"
+                                <a
+                                    href="./checkout.html"
+                                    class="btn btn--primary btn--rounded act-dropdown__checkout-btn"
                                     >Check Out All</a
                                 >
                             </div>
@@ -4719,6 +4719,40 @@
 
             <div class="top-act__user">
                 <img src="./assets/img/avatar.jpg" alt="" class="top-act__avatar" />
+
+                <!-- dropdown -->
+                <div class="act-dropdown top-act__dropdown">
+                    <div class="act-dropdown__inner user-menu">
+                        <img
+                            src="./assets/icons/arrow-up.png"
+                            alt=""
+                            class="act-dropdown__arrow top-act__dropdown-arrow"
+                        />
+
+                        <div class="user-menu__top">
+                            <img src="./assets/img/avatar.jpg" alt="" class="user-menu__avatar">
+                            <div class="">
+                                <p class="user-menu__name">John Smith</p>
+                                <p>@Johnsmith</p>
+                            </div>
+                        </div>
+
+                        <ul class="user-menu__list">
+                            <li>
+                                <a href="./profile.html" class="user-menu__link">Profile</a>
+                            </li>
+                            <li>
+                                <a href="./favorite.html" class="user-menu__link">Favorite List</a>
+                            </li>
+                            <li class="user-menu__separate">
+                                <a href="#!" class="user-menu__link">Setting</a>
+                            </li>
+                            <li>
+                                <a href="./sign-in.html" class="user-menu__link">Logout</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
