--- a/templates/header.html
+++ b/templates/header.html
@@ -19,7 +19,7 @@
 
             <a href="./checkout.html" class="navbar-btn d-none d-md-flex">
                 <img src="./assets/icons/buy.svg" alt="" class="navbar-btn__icon icon" />
-                <span class="navbar-btn__title">Card</span>
+                <span class="navbar-btn__title">Cart</span>
                 <span class="navbar-btn__qnt">3</span>
             </a>
 
@@ -3097,8 +3097,8 @@
                                                     </div>
                                                 </li>
                                                 <li class="menu-column__item">
-                                                    <a href="#!" class="menu-column__link">Gift Cards</a>
-                                                    <!-- Sub menu for "Gift Cards" -->
+                                                    <a href="#!" class="menu-column__link">Gift carts</a>
+                                                    <!-- Sub menu for "Gift carts" -->
                                                     <div class="sub-menu">
                                                         <div class="sub-menu__column">
                                                             <!-- Menu column 1 -->
@@ -4547,7 +4547,7 @@
         <!-- Actions -->
         <div class="top-act">
             <a href="./sign-in.html" class="btn btn--text d-md-none">Sign in</a>
-            <a href="./sign-up.html" class=" btn top-act__sign-up btn--primary">Sign up</a>
+            <a href="./sign-up.html" class="btn top-act__sign-up btn--primary">Sign up</a>
         </div>
     </div>
 </div>
