--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -9,7 +9,7 @@ html.dark {
     --header-bg-color: #171c28;
     --top-action-group-btn: #292e39;
     --top-action-group-shadow: rgba(0, 0, 0, 0.2);
-    --top-action-separate: #ededf6;
+    --top-action-separate: #545458;
 
     @include abstracts.screen(lg) {
         --header-bg-color: #171c28;
