--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -1515,12 +1515,12 @@
                                                             <div class="menu-column">
                                                                 <div class="menu-column__icon">
                                                                     <img
-                                                                        src="../assets/img/category/cate.1.1.svg"
+                                                                        src="./assets/img/category/cate.1.1.svg"
                                                                         alt=""
                                                                         class="menu-column__icon-1"
                                                                     />
                                                                     <img
-                                                                        src="../assets/img/category/cate.1.2.svg"
+                                                                        src="./assets/img/category/cate.1.2.svg"
                                                                         alt=""
                                                                         class="menu-column__icon-2"
                                                                     />
@@ -4730,7 +4730,7 @@
                         />
 
                         <div class="user-menu__top">
-                            <img src="./assets/img/avatar.jpg" alt="" class="user-menu__avatar">
+                            <img src="./assets/img/avatar.jpg" alt="" class="user-menu__avatar" />
                             <div class="">
                                 <p class="user-menu__name">John Smith</p>
                                 <p>@Johnsmith</p>
@@ -4745,9 +4745,15 @@
                                 <a href="./favorite.html" class="user-menu__link">Favorite List</a>
                             </li>
                             <li class="user-menu__separate">
-                                <a href="#!" class="user-menu__link">Setting</a>
+                                <a href="#!" class="user-menu__link" id="switch-theme-btn">
+                                    <span>Dark mode</span>  
+                                    <img src="./assets/icons/sun.svg" alt="" class="icon" />
+                                </a>
                             </li>
                             <li>
+                                <a href="#!" class="user-menu__link">Setting</a>
+                            </li>
+                            <li class="user-menu__separate">
                                 <a href="./sign-in.html" class="user-menu__link">Logout</a>
                             </li>
                         </ul>
